--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cssnano": "^5.1.14",
     "postcss": "^8.4.21",
     "postcss-load-config": "^4.0.1"
   }
