--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "cssnano": "^5.1.14",
     "postcss": "^8.4.21",
-    "postcss-load-config": "^4.0.1"
+    "postcss-load-config": "^4.0.1",
+    "tailwindcss": "^3.2.6"
   }
 }
